add changes according to the new statement of work